deploy: a824afd17d767a29752445e0833a7968392f7fed

--- a/gale/settings/user-management/overview/index.html
+++ b/gale/settings/user-management/overview/index.html
@@ -2937,16 +2937,7 @@
 <li><strong>Custom Roles</strong>: User-defined roles tailored to specific needs with customized access definitions for module-wise permissions. <a href="../role-management/#manage-custom-roles" target="_blank">Learn more</a>.</li>
 </ul>
 <p>For example, a <em>Master Admin</em> role is assigned by default to the account owner. Similarly, an <em>Agent Admin</em> role is assigned to a user who creates an agent and has complete control over it.</p>
-<p><strong>Users Management</strong> operates on two distinct levels discussed below:</p>
-<ul>
-<li>
-<p><strong>Account level</strong>: At the account level, administrators can manage users with a broader scope, encompassing the entire GALE account. This includes responsibilities such as user registration, access control, and permissions applicable across various applications within the GALE platform. <a href="../role-management/#account-and-agent-level-features" target="_blank">Roles Management</a>.</p>
-</li>
-<li>
-<p><strong>Agent level</strong>: User management becomes more detailed and specific at the application level, concentrating on individual applications within the GALE platform. </p>
-<p>The owner of each respective application holds the authority to extend invitations to any number of individual users, customizing their capabilities in alignment with the unique requirements of each application. For more information about setting app-level permissions, see <a href="../role-management/#account-and-agent-level-features" target="_blank">Roles Management</a>.</p>
-</li>
-</ul>
+<p><strong>Users Management</strong> operates on two distinct levels discussed <a href="../../settings-overview/#levels-of-users-management" target="_blank">here</a>.</p>
 <p>Once you invite a user or import users data, you can change their roles, assign/unassign permissions, delete users. and do more using the <a href="../role-management/" target="_blank">Roles Management</a> and <a href="../users/" target="_blank">Users</a> features on the <strong>Settings</strong> console.</p>
 <p><a href="../../settings-overview/" target="_blank">Learn more</a> about other features on the <strong>Settings</strong> console.</p>
 
