deploy: 4794df736f65ef14596d0c2e4aecd6a6dca07cc0

--- a/gale/settings/settings-overview/index.html
+++ b/gale/settings/settings-overview/index.html
@@ -3057,7 +3057,7 @@
 <li><a href="../../models/external-models/add-an-external-model-using-easy-integration/" target="_blank">Easy Integration</a> and <a href="../../models/external-models/add-an-external-model-using-api-integration/" target="_blank">API Integration</a></li>
 <li><a href="../../agents/guardrails/manage-guardrails/" target="_blank">Manage Guardrails</a> </li>
 <li>
-<p>Monitoring</p>
+<p><a href="../monitoring/overview/" target="_blank">Monitoring</a></p>
 </li>
 <li>
 <p><a href="../monitoring/audit-logs/" target="_blank">Audit Logs</a></p>
@@ -3150,7 +3150,7 @@
   <tr>
    <td><b>Users Management</b></td>
    <td><p>Helps add, remove, and manage admin, member, and viewer users, roles, and permissions for accounts, agents, and models.</p>
-<p>Manage user settings for AD sync, profile visibility and configuration, self-signup for enterprise users, and email notifications to users.</p></td>
+<p>Manage user settings for AD sync, profile visibility and configuration, and email notifications to users.</p></td>
 <td><p><strong>Users</strong></p>
 <ul>
 <li>All users across your enterprise network accounts are listed here.</li> 
@@ -3181,7 +3181,6 @@
 <li><strong>Active Directory</strong>: Configure and connect your organization's AD to import user information from required organization units to GALE seamlessly. Enable automatic data sync between the AD and GALE daily, weekly, or monthly.</li>
 <li><strong>User Settings</strong>: Set up the visibility of user profile information across GALE. Select profile fields and allow edits by the end user.
 </li>
-<li><strong>Self sign up for enterprise users</strong>: Configure if new users from your domain can request to join this account.</li>
 <li><strong>Email Notifications</strong>: Select if and when the users should receive email notifications when they are added to your account.
 </li>
 </ul>
