--- a/gale/settings/user-management/users/index.html
+++ b/gale/settings/user-management/users/index.html
@@ -3306,10 +3306,10 @@
 </ol>
 <p><strong>Key Suggestions</strong></p>
 <ul>
-<li>Click and download the sample .<em>csv</em> file for reference.</li>
-</ul>
+<li>
+<p>Click and download the sample .<em>csv</em> file for reference.</p>
 <p><a class="glightbox" href="../images/click-download-sample-file.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/click-download-sample-file.png" alt="download sample file" title="download sample file" style="border: 1px solid gray; zoom:75%;"></a></p>
-<ul>
+</li>
 <li>
 <p>The fields are predefined in the sample file, and the data requirements are shown below:
 <a class="glightbox" href="../images/prefefined-fields.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/prefefined-fields.png" alt="predefined fields" title="predefined fields" style="border: 1px solid gray; zoom:75%;"></a></p>
@@ -3381,9 +3381,9 @@
 </li>
 <li>
 <p>Click <strong>Remove</strong> in the <strong>Remove users</strong> window.</p>
+<p><a class="glightbox" href="../images/click-remove.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/click-remove.png" alt="click remove" title="click remove" style="border: 1px solid gray; zoom:75%;"></a></p>
 </li>
 </ol>
-<p><a class="glightbox" href="../images/click-remove.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/click-remove.png" alt="click remove" title="click remove" style="border: 1px solid gray; zoom:75%;"></a></p>
 <p>When a user's account and role assignments are permanently deleted, the user is removed from the list, and the <strong>Total Users</strong> and <strong>Active Users</strong> counts on the dashboard are updated accordingly.</p>
 <p><strong>Updated Screen</strong></p>
 <p><a class="glightbox" href="../images/bulk-delete-result.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/bulk-delete-result.png" alt="bulk delete result" title="bulk delete result" style="border: 1px solid gray; zoom:75%;"></a></p>
