--- a/gale/settings/settings-overview/index.html
+++ b/gale/settings/settings-overview/index.html
@@ -3085,7 +3085,7 @@
 <li>Unlock the locked users.</li>
 <li>Reassign a default or custom role to a user.</li>
 </ul>
-<p><a href="../user-management/users/" target="_blank">Learn more</a></p>
+<p><a href="../user-management/users/" target="_blank">Learn more</a> about this feature.</p>
 <p><strong>Roles and Permissions</strong></p>
 <ul>
 <li>View system-generated roles for <b>account</b> and <b>agent</b> role types.</li>
@@ -3093,7 +3093,7 @@
 <li>View the enabled/disabled access controls for various modules and permissions for system roles.</li>
 <li>Add new custom roles for agent and account types, enable/disable access, and set access controls (full, view, custom, and no access) for various modules and permissions assigned to the roles. </li>
 </ul>
-<p><a href="../user-management/role-management/" target="_blank">Learn more</a></p>
+<p><a href="../user-management/role-management/" target="_blank">Learn more</a> about this feature.</p>
 <p><strong>Settings</strong></p>
 <p><a href="../user-management/settings/active-directory/" target="_blank">Sync and import key user information</a> from your organization's AD by doing the following: </p>
 <ul>
@@ -3109,7 +3109,7 @@
 <li>Configure how joining requests from new users are handled, including automatic approval options.</li>
 <li>Choose whether users should receive email notifications upon being added to your account via email invitation or AD sync.</li>
 </ul>
-<p><a href="../user-management/settings/active-directory/" target="_blank">Learn more</a></p>
+<p><a href="../user-management/settings/active-directory/" target="_blank">Learn more</a> about this feature.</p>
 <p><strong>Integrations</strong></p>
 <p>Integrate connections for <a href="../integrations/integrate-with-wandb/" target="_blank">Weights &amp; Biases</a>, <a href="../integrations/integrate-with-s3-bucket/" target="_blank">AWS S3 Bucket</a>, and <a href="../integrations/enable-hugging-face/" target="_blank">Hugging Face</a> using API or App credentials. </p>
 <p><strong>Guardrails</strong></p>
