deploy: 6c305ef44e7c56bbc67b657ee7d77d57157eba91

--- a/gale/agents/guardrails/manage-guardrails/index.html
+++ b/gale/agents/guardrails/manage-guardrails/index.html
@@ -2952,7 +2952,7 @@
 <p>Steps to deploy a scanner:</p>
 <ol>
 <li>
-<p>Click the <strong>Settings</strong> icon in the top navigation bar.</p>
+<p>Click <strong>Settings</strong> in the top navigation bar.</p>
 </li>
 <li>
 <p>In the left navigation pane, click <strong>Manage Guardrails</strong>.<br />
