--- a/gale/settings/monitoring/audit-logs/index.html
+++ b/gale/settings/monitoring/audit-logs/index.html
@@ -3280,6 +3280,8 @@
    </td>
   </tr>
   <tr>
+  <td colspan="4"><b>Integration Name</b>, <b>Integration ID</b>, and <b>Integration Type</b> are displayed for all the category events below.</td>
+  <tr>
    <td rowspan="2" ><strong>Integrations</strong>
    </td>
    <td>Integration added
@@ -3318,7 +3320,7 @@
    </td>
   </tr>
   <tr>
-   <td rowspan="8" ><strong>Models</strong>
+   <td rowspan="7" ><strong>Models</strong>
    </td>
    <td>Model added(external models only)
    </td>
