deploy: f271a800bedbdf3833ed9d91dcc69b28ec40907f

--- a/gale/settings/monitoring/audit-logs/index.html
+++ b/gale/settings/monitoring/audit-logs/index.html
@@ -3769,6 +3769,7 @@ Both operators cannot be used together.</p></div>
 <p>To set a specific date as the start date for viewing audit logs, click on the desired date in the widget. </p>
 <p>By default, the current day will be set as the end date. This feature allows you to easily customize the period for which you want to monitor and analyze audit logs.</p>
 <p><a class="glightbox" href="../images/custom-start-date.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/custom-start-date.png" alt="custom start date" title="custom start date" style="border: 1px solid gray; zoom:75%;"></a></p>
+<p><a href="../../settings-overview/" target="_blank">Learn more</a> about other features on the <b>Settings</b> Console.</p>
 
 
 
