--- a/gale/settings/monitoring/audit-logs/index.html
+++ b/gale/settings/monitoring/audit-logs/index.html
@@ -3288,18 +3288,9 @@
    </td>
    <td>Tracks integrations added by the user to the account.
    </td>
-   <td rowspan="2" >
-<ul>
-
-<li>Integration Name
-
-<li>Integration ID
-
-<li>Integration Type
-</li>
-</ul>
+   <td rowspan="2" >No additional parameters.
    </td>
-  </tr>
+   </tr>
   <tr>
    <td>Integration deleted
    </td>
