--- a/gale/settings/monitoring/audit-logs/index.html
+++ b/gale/settings/monitoring/audit-logs/index.html
@@ -3193,14 +3193,19 @@
 <li><b>User ID</b>, <b>Role ID</b>, <b>Model ID</b>, <b>Agent ID</b>, <b>Guardrail ID</b>, <b>Integration ID</b>, and <b>Experiment ID</b> pertain to the unique identifier associated with the module’s entity in the system.</li></ul></p></div>
 
 <div class="admonition warning">
-<p class="admonition-title">Important</p>
-<p>The <b>User ID</b> and <b>IP Address</b> are shown for audit log entries across all modules, in addition to module-specific event and category metadata parameters listed in the table below.</p></div>
+<p class="admonition-title">Universal Metadata</p>
+<p>The <b>User ID</b> and <b>IP Address</b> are shown for audit log entries across all modules, in addition to module and category specific metadata listed in the table below.</p></div>
 
 <table>
-  <tr>
-   <td>
-<strong>Category</strong>
+    <tr>
+   <td colspan="3" align="center"><strong>Category</strong>: Login/Logout
    </td>
+  </tr>
+  <tr>
+   <td colspan="3" ><strong>Email ID</strong> is <strong> </strong>is displayed for all the category events below.
+   </td>
+  </tr>
+    <tr>
    <td><strong>Event</strong>
    </td>
    <td><strong>Description</strong>
@@ -3209,19 +3214,12 @@
    </td>
   </tr>
   <tr>
-   <td colspan="4" ><strong>Email ID</strong> is <strong> </strong>is displayed for all the category events below.
-   </td>
-  </tr>
-  <tr>
-   <td rowspan="2" ><strong>Login/Logout</strong>
-   </td>
    <td>Login
    </td>
    <td>Tracks the account login activity.
    </td>
    <td>
 <ul>
-
 <li>Login method
 </li>
 </ul>
@@ -3237,13 +3235,23 @@
    </td>
   </tr>
   <tr>
-   <td colspan="4" ><strong>Role ID</strong> is displayed for all the category events below, except <em>Role Changed</em>.
+     <td colspan="3" align="center"><strong>Category</strong>: Roles
+   </td>
+   </tr>
+  <tr>
+   <td colspan="3" ><strong>Role ID</strong> is displayed for all the category events below, except <em>Role Changed</em>.
+   </td>
+  </tr>
+      <tr>
+   <td><strong>Event</strong>
+   </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
    </td>
   </tr>
   <tr>
-   <td rowspan="4" ><strong>Roles</strong>
-   </td>
-   <td>Role edited
+          <td>Role edited
    </td>
    <td>Tracks the edits done to a custom role.
    </td>
@@ -3258,7 +3266,6 @@
    </td>
    <td rowspan="2" >
 <ul>
-
 <li>Role Type
 </li>
 </ul>
@@ -3280,10 +3287,20 @@
    </td>
   </tr>
   <tr>
-  <td colspan="4"><b>Integration Name</b>, <b>Integration ID</b>, and <b>Integration Type</b> are displayed for all the category events below.</td>
-  <tr>
-   <td rowspan="2" ><strong>Integrations</strong>
+     <td colspan="3" align="center"><strong>Category</strong>: Integrations
    </td>
+   </tr>
+  <tr>
+  <td colspan="3"><b>Integration Name</b>, <b>Integration ID</b>, and <b>Integration Type</b> are displayed for all the category events below.</td></tr>
+        <tr>
+   <td><strong>Event</strong>
+   </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
+   </td>
+  </tr>
+  <tr>
    <td>Integration added
    </td>
    <td>Tracks integrations added by the user to the account.
@@ -3298,21 +3315,28 @@
    </td>
   </tr>
   <tr>
-   <td colspan="4" >
+     <td colspan="3" align="center"><strong>Category</strong>: Models
+   </td>
+   </tr>
+  <tr>
+   <td colspan="3">
 <ul>
-
 <li><strong>Model ID </strong>and <strong>Model Name</strong> are displayed for all the<em> Model</em> category events.
-
 <li><strong>Model Type</strong> is displayed for <em>Model Deleted</em>, <em>API Key created</em>, <em>API Key deleted</em>, <em>Model Finetuning</em>, <em>Model Deployed</em>, and <em>Model Undeployed </em>events.
-
 <li><strong>Hardware Type</strong> is displayed for <em>Model Finetuning</em>, <em>Model Deployed</em>, and <em>Model Undeployed</em> events.
 </li>
 </ul>
    </td>
   </tr>
-  <tr>
-   <td rowspan="7" ><strong>Models</strong>
+   <tr>
+   <td><strong>Event</strong>
    </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
+   </td>
+  </tr>
+  <tr>
    <td>Model added(external models only)
    </td>
    <td>Tracks the addition of external models to the account.
@@ -3429,12 +3453,22 @@
    </td>
   </tr>
   <tr>
-   <td colspan="4" ><strong>Agent ID </strong>and<strong> Agent Name </strong> are displayed for all the category events below.
+     <td colspan="3" align="center"><strong>Category</strong>: Agents
+   </td>
+   </tr>
+  <tr>
+   <td colspan="3"><strong>Agent ID </strong>and<strong> Agent Name </strong> are displayed for all the category events below.
+   </td>
+  </tr>
+     <tr>
+   <td><strong>Event</strong>
+   </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
    </td>
   </tr>
   <tr>
-   <td rowspan="2" ><strong>Agents</strong>
-   </td>
    <td>Agent created
    </td>
    <td>Tracks the creation of an agent in the account.
@@ -3460,18 +3494,26 @@
 </ul>
    </td>
   </tr>
-  <tr>
-   <td rowspan="2" ><strong>User Management</strong>
+    <tr>
+     <td colspan="3" align="center"><strong>Category</strong>: Users Management
    </td>
+   </tr>
+      <tr>
+   <td><strong>Event</strong>
+   </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
+   </td>
+  </tr>
+  <tr>
    <td>User invited
    </td>
    <td>Tracks the invitation of new users to the account.
    </td>
    <td>
 <ul>
-
 <li>Added User IDs
-
 <li>Role Name
 
 <li>Role ID
@@ -3486,26 +3528,33 @@
    </td>
    <td>
 <ul>
-
 <li>Removed User IDs
 </li>
 </ul>
    </td>
   </tr>
+      <tr>
+     <td colspan="3" align="center"><strong>Category</strong>: Prompts
+   </td>
+   </tr>
   <tr>
-   <td colspan="4" >
+   <td colspan="3">
 <ul>
-
 <li><strong>Prompt ID </strong>is displayed for all the <em>Prompts </em>category events.
-
 <li><strong>Prompt Name</strong> is displayed for <em>Prompt created</em>, <em>Versions Committed</em>, <em>Versions Restored</em>, <em>Prompt Shared</em>, <em>Endpoint Copied</em>, and <em>API Key Created </em>category events.
 </li>
 </ul>
    </td>
   </tr>
-  <tr>
-   <td rowspan="2" ><strong>Prompts</strong>
+   <tr>
+   <td><strong>Event</strong>
    </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
+   </td>
+  </tr>
+  <tr>
    <td>Prompt created
    </td>
    <td>Tracks the creation of a prompt by the account user.
@@ -3521,31 +3570,24 @@
    </td>
   </tr>
   <tr>
-   <td>
-   </td>
    <td>Versions committed
    </td>
    <td>Tracks the prompt versions committed by the account user.
    </td>
    <td rowspan="2" >
 <ul>
-
 <li>Version Name
 </li>
 </ul>
    </td>
   </tr>
   <tr>
-   <td>
-   </td>
    <td>Version Restored
    </td>
    <td>Tracks the prompt version restored by the account user.
    </td>
   </tr>
   <tr>
-   <td>
-   </td>
    <td>Prompt Shared
    </td>
    <td>Tracks the prompts shared by the account user with other users.
@@ -3555,24 +3597,18 @@
    </td>
   </tr>
   <tr>
-   <td>
-   </td>
    <td>Endpoint Copied
    </td>
    <td>Tracks the prompt endpoint copy done by the account user.
    </td>
   </tr>
   <tr>
-   <td>
-   </td>
    <td>API Key Created
    </td>
    <td>Tracks the API key creation for the prompt endpoint by the account user.
    </td>
   </tr>
   <tr>
-   <td>
-   </td>
    <td>Generated Test Data
    </td>
    <td>Tracks the generation of test data by the account user.
@@ -3590,35 +3626,52 @@
    </td>
   </tr>
   <tr>
-   <td>
-   </td>
    <td>Generated Prompt
    </td>
    <td>Tracks the prompt generation done by the accout user.
    </td>
   </tr>
-  <tr>
-   <td><strong>Dataset</strong>
+      <tr>
+     <td colspan="3" align="center"><strong>Category</strong>: Dataset
    </td>
+   </tr>
+   <tr>
+   <td><strong>Event</strong>
+   </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
+   </td>
+  </tr>
+  <tr>
    <td>Dataset uploaded
    </td>
    <td>Tracks the dataset uploads in the account.
    </td>
    <td>
 <ul>
-
 <li>File type(extension)
 </li>
 </ul>
    </td>
   </tr>
-  <tr>
-   <td colspan="4" ><strong>Guardrail Name</strong>, <strong>Guardrail ID</strong>, and <strong>Hardware Type </strong>are displayed for all the category events below.
+     <tr>
+     <td colspan="3" align="center"><strong>Category</strong>: Guardrails
+   </td>
+   </tr>
+   <tr>
+   <td colspan="3"><strong>Guardrail Name</strong>, <strong>Guardrail ID</strong>, and <strong>Hardware Type </strong>are displayed for all the category events below.
    </td>
   </tr>
   <tr>
-   <td rowspan="2" ><strong>Guardrails</strong>
+   <td><strong>Event</strong>
    </td>
+   <td><strong>Description</strong>
+   </td>
+   <td><strong>Metadata</strong>
+   </td>
+  </tr>
+  <tr>
    <td>Guardrails deployed
    </td>
    <td>Tracks the guardrails deployment in the account.
