deploy: ca7494c4a5a061a9fd41224706bae1837d4b8a77

--- a/gale/settings/monitoring/audit-logs/index.html
+++ b/gale/settings/monitoring/audit-logs/index.html
@@ -3202,7 +3202,7 @@
    </td>
   </tr>
   <tr>
-   <td colspan="3" ><strong>Email ID</strong> is <strong> </strong>is displayed for all the category events below.
+   <td colspan="3" ><strong>Email ID</strong> is displayed for all the category events below.
    </td>
   </tr>
     <tr>
@@ -3210,7 +3210,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3230,8 +3230,8 @@
    </td>
    <td>Tracks the account logout activity.
    </td>
-   <td>
-    No additional parameters.
+   <td align="center">
+    -
    </td>
   </tr>
   <tr>
@@ -3247,7 +3247,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3255,8 +3255,8 @@
    </td>
    <td>Tracks the edits done to a custom role.
    </td>
-   <td>
-    No additional parameters.
+   <td align="center">
+    -
    </td>
   </tr>
   <tr>
@@ -3282,8 +3282,8 @@
    </td>
    <td>Tracks the role changes made for member users. This also includes role  changes for multiple users (bulk change).
    </td>
-   <td>
-    No additional parameters.
+   <td align="center">
+    -
    </td>
   </tr>
   <tr>
@@ -3297,7 +3297,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3305,8 +3305,7 @@
    </td>
    <td>Tracks integrations added by the user to the account.
    </td>
-   <td rowspan="2" >No additional parameters.
-   </td>
+   <td rowspan="2" align="center">-</td>
    </tr>
   <tr>
    <td>Integration deleted
@@ -3333,7 +3332,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3341,8 +3340,8 @@
    </td>
    <td>Tracks the addition of external models to the account.
    </td>
-   <td rowspan="4" >
-    No additional parameters.
+   <td rowspan="4" align="center">
+   -
    </td>
   </tr>
   <tr>
@@ -3465,7 +3464,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3473,8 +3472,8 @@
    </td>
    <td>Tracks the creation of an agent in the account.
    </td>
-   <td>
-    No additional parameters.
+   <td align="center">
+   -
    </td>
   </tr>
   <tr>
@@ -3503,7 +3502,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3551,7 +3550,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3559,8 +3558,8 @@
    </td>
    <td>Tracks the creation of a prompt by the account user.
    </td>
-   <td rowspan="2" >
-    No additional parameters.
+   <td rowspan="2" align="center">
+   -
    </td>
   </tr>
   <tr>
@@ -3592,8 +3591,8 @@
    </td>
    <td>Tracks the prompts shared by the account user with other users.
    </td>
-   <td rowspan="3" >
-    No additional parameters
+   <td rowspan="3" align="center">
+   -
    </td>
   </tr>
   <tr>
@@ -3640,7 +3639,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3668,7 +3667,7 @@
    </td>
    <td><strong>Description</strong>
    </td>
-   <td><strong>Metadata</strong>
+   <td><strong>Additional Metadata</strong>
    </td>
   </tr>
   <tr>
@@ -3676,8 +3675,8 @@
    </td>
    <td>Tracks the guardrails deployment in the account.
    </td>
-   <td>
-    No additional parameters.
+   <td align="center">
+    -
    </td>
   </tr>
   <tr>
