--- a/gale/settings/monitoring/audit-logs/index.html
+++ b/gale/settings/monitoring/audit-logs/index.html
@@ -3194,7 +3194,7 @@
 
 <div class="admonition warning">
 <p class="admonition-title">Universal Metadata</p>
-<p>The <b>User ID</b> and <b>IP Address</b> are shown for audit log entries across all modules, in addition to module and category specific metadata listed in the table below.</p></div>
+<p>The <b>User ID</b> and <b>IP Address</b> are shown for audit log entries across all modules, in addition to module and category specific metadata listed in the tables below.</p></div>
 
 <table>
     <tr>
@@ -3234,6 +3234,9 @@
     -
    </td>
   </tr>
+  </table>
+
+<table>
   <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Roles
    </td>
@@ -3286,6 +3289,9 @@
     -
    </td>
   </tr>
+  </table>
+
+<table>
   <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Integrations
    </td>
@@ -3313,6 +3319,9 @@
    <td>Tracks integration deletions in the account.
    </td>
   </tr>
+  </table>
+
+<table>
   <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Models
    </td>
@@ -3370,7 +3379,6 @@
    </td>
    <td>
 <ul>
-
 <li>Training method
 
 <li>No. of epochs
@@ -3452,6 +3460,9 @@
 </ul>
    </td>
   </tr>
+  </table>
+
+<table>
   <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Agents
    </td>
@@ -3494,6 +3505,9 @@
 </ul>
    </td>
   </tr>
+  </table>
+
+<table>
     <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Users Management
    </td>
@@ -3533,6 +3547,9 @@
 </ul>
    </td>
   </tr>
+  </table>
+
+<table>
       <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Prompts
    </td>
@@ -3632,6 +3649,9 @@
    <td>Tracks the prompt generation done by the accout user.
    </td>
   </tr>
+  </table>
+
+<table>
       <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Dataset
    </td>
@@ -3656,6 +3676,9 @@
 </ul>
    </td>
   </tr>
+  </table>
+
+<table>
      <tr>
      <td colspan="3" align="center"><strong>Category</strong>: Guardrails
    </td>
