deploy: 0b3cc6df4c8164049749239298443da03e54ab4d

--- a/gale/agents/agent-monitor/accessing-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/accessing-agent-monitor/index.html
@@ -3114,25 +3114,23 @@ Ensure that the status of the selected agent is ‘Deployed’. Agent monitoring
 <a class="glightbox" href="../images/Agent_monitor_Allagents.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/Agent_monitor_Allagents.png" alt="All agents" title="All agents" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 <li>
-<p>In the left navigation pane, click <strong>Agent monitor</strong>. The Agent monitor page is displayed.</p>
+<p>In the left navigation pane, click <strong>Agent monitor</strong>. The Agent monitor page is displayed.<br />
+<a class="glightbox" href="../images/agent_monitor_dashboard.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/agent_monitor_dashboard.png" alt="agent monitor dashboard" title="Agent monitor dashboard" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
-</ol>
-<p><a class="glightbox" href="images/image2.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="alt_text" src="images/image2.png" title="image_tooltip" /></a></p>
+<li>
+<p>Click one of the following tabs to see the data for the deployed agents:</p>
 <ol>
-<li>Click one of the following tabs to see the data for the deployed agents:<ol>
 <li><strong>All runs</strong></li>
 <li><strong>LLM calls</strong></li>
 </ol>
-</li>
-</ol>
 <p>For more information, see <a href="../understanding-the-agent-monitor-interface/">Understanding the Agent Monitor interface</a>.</p>
-<ol>
+</li>
 <li>
-<p>Click each row for detailed information on each agent run or LLM call. <br />
+<p>Click each row for detailed information on each agent run or LLM call.<br />
 A detailed view panel opens on the right. For more information, see [Viewing detailed run information].</p>
 </li>
 <li>
-<p>(Optional) To filter or search the list of runs or calls on the Agent monitor page, see &lt;<em><span style="text-decoration:underline;">Searching and filtering&gt;</span></em>.</p>
+<p>(Optional) To filter or search the list of runs or calls on the Agent monitor page, see <a href="../searching-and-filtering-information/">Searching and filtering</a>.</p>
 </li>
 </ol>
 
