deploy: 5575313cc644bf920554b51079bea38b233ad8ba

--- a/gale/agents/agent-monitor/accessing-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/accessing-agent-monitor/index.html
@@ -3115,7 +3115,7 @@ Ensure that the status of the selected agent is ‘Deployed’. Agent monitoring
 </li>
 <li>
 <p>In the left navigation pane, click <strong>Agent monitor</strong>. The Agent monitor page is displayed.<br />
-<a class="glightbox" href="../images/agent_monitor_dashboard.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/agent_monitor_dashboard.png" alt="agent monitor dashboard" title="Agent monitor dashboard" style="border: 1px solid gray; zoom:80%;"></a></p>
+<a class="glightbox" href="../images/agent_monitor_dashboard.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/agent_monitor_dashboard.png" alt="Agent monitor dashboard" title="Agent monitor dashboard" style="border: 1px solid gray; zoom:80%;"></a></p>
 </li>
 <li>
 <p>Click one of the following tabs to see the data for the deployed agents:</p>
@@ -3127,7 +3127,7 @@ Ensure that the status of the selected agent is ‘Deployed’. Agent monitoring
 </li>
 <li>
 <p>Click each row for detailed information on each agent run or LLM call.<br />
-A detailed view panel opens on the right. For more information, see [Viewing detailed run information].</p>
+A detailed view panel opens on the right. For more information, see <a href="../understanding-the-agent-monitor-interface/#viewing-detailed-run-information">Viewing detailed run information</a>.</p>
 </li>
 <li>
 <p>(Optional) To filter or search the list of runs or calls on the Agent monitor page, see <a href="../searching-and-filtering-information/">Searching and filtering</a>.</p>
