deploy: 06cd229ac4f9ae45c9f3d2506665352d9423191e

--- a/gale/agents/agent-monitor/searching-and-filtering-information/index.html
+++ b/gale/agents/agent-monitor/searching-and-filtering-information/index.html
@@ -3206,11 +3206,11 @@
 <ol>
 <li>Click the calendar button in the top right corner of the Agent monitor page.</li>
 </ol>
-<p><a class="glightbox" href="images/image1.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="alt_text" src="images/image1.png" title="image_tooltip" /></a></p>
+<p><a class="glightbox" href="../images/agent_monitor_calendar_selection.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/agent_monitor_calendar_selection.png" alt="calendar" title="Calendar" style="border: 1px solid gray; zoom:80%;"></a></p>
 <ol>
 <li>Select a predefined time range or set custom dates.</li>
 </ol>
-<p><a class="glightbox" href="images/image2.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="alt_text" src="images/image2.png" title="image_tooltip" /></a></p>
+<p><a class="glightbox" href="../images/agent_monitor_calendar.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/agent_monitor_calendar.png" alt="calendar" title="Calendar custom dates" style="border: 1px solid gray; zoom:80%;"></a></p>
 <ol>
 <li>Click <strong>Apply</strong> to update the results.</li>
 </ol>
@@ -3222,11 +3222,11 @@
 <li>Click the Filter icon.</li>
 <li>Click + Add Filter.</li>
 </ol>
-<p><a class="glightbox" href="images/image3.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="alt_text" src="images/image3.png" title="image_tooltip" /></a></p>
+<p><a class="glightbox" href="../agent-monitor/images/agent_monitor_filtericon.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../agent-monitor/images/agent_monitor_filtericon.png" alt="Filter" title="Filter" style="border: 1px solid gray; zoom:80%;"></a></p>
 <ol>
 <li>Select options for Column, Operator, and Value.</li>
 </ol>
-<p><a class="glightbox" href="images/image4.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img alt="alt_text" src="images/image4.png" title="image_tooltip" /></a></p>
+<p><a class="glightbox" href="../agent-monitor/images/agent_monitor_filter_options.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../agent-monitor/images/agent_monitor_filter_options.png" alt="Filter options" title="Filter options" style="border: 1px solid gray; zoom:80%;"></a></p>
 <ol>
 <li>Click <strong>Apply</strong>.</li>
 </ol>
