--- a/gale/agents/agent-monitor/accessing-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/accessing-agent-monitor/index.html
@@ -3126,8 +3126,8 @@ Ensure that the status of the selected agent is ‘Deployed’. Agent monitoring
 <p>For more information, see <a href="../understanding-the-agent-monitor-interface/">Understanding the Agent Monitor interface</a>.</p>
 </li>
 <li>
-<p>Click each row for detailed information on each agent run or LLM call.<br />
-A detailed view panel opens on the right. For more information, see <a href="../understanding-the-agent-monitor-interface/#viewing-detailed-run-information">Viewing detailed run information</a>.</p>
+<p>Click each row for detailed information on each agent run or LLM call. A detailed view panel opens on the right.  </p>
+<p>For more information, see <a href="../understanding-the-agent-monitor-interface/#viewing-detailed-run-information">Viewing detailed run information</a>.</p>
 </li>
 <li>
 <p>(Optional) To filter or search the list of runs or calls on the Agent monitor page, see <a href="../searching-and-filtering-information/">Searching and filtering</a>.</p>
