--- a/gale/agents/agent-monitor/accessing-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/accessing-agent-monitor/index.html
@@ -3108,11 +3108,11 @@
 <ol>
 <li><a href="https://galeadmin-kore.github.io/docs/gale/getting-started/sign-up-sign-in/#sign-in-to-gale">Sign in</a> to your GALE account.</li>
 <li>On the top navigation bar, click <strong>Agents</strong>.</li>
-<li>
-<p>On the <strong>All agents</strong> page, click the desired agent.<br />
-Ensure that the status of the selected agent is ‘Deployed’. Agent monitoring is available only when agents are deployed in production. Agents that are in debugging or design phases are not tracked here.<br />
-<a class="glightbox" href="../images/Agent_monitor_Allagents.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/Agent_monitor_Allagents.png" alt="All agents" title="All agents" style="border: 1px solid gray; zoom:80%;"></a></p>
-</li>
+<li>On the <strong>All agents</strong> page, click the desired agent.  </li>
+</ol>
+<p>Ensure that the status of the selected agent is ‘Deployed’. Agent monitoring is only available for agents deployed in production. Agents that are in debugging or design phases are not tracked here. </p>
+<p><a class="glightbox" href="../images/Agent_monitor_Allagents.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/Agent_monitor_Allagents.png" alt="All agents" title="All agents" style="border: 1px solid gray; zoom:80%;"></a></p>
+<ol>
 <li>
 <p>In the left navigation pane, click <strong>Agent monitor</strong>. The Agent monitor page is displayed.<br />
 <a class="glightbox" href="../images/agent_monitor_dashboard_new.png" data-type="image" data-width="auto" data-height="auto" data-desc-position="bottom"><img src="../images/agent_monitor_dashboard_new.png" alt="Agent monitor dashboard" title="Agent monitor dashboard" style="border: 1px solid gray; zoom:80%;"></a></p>
