deploy: d8e0d0f76d2a8c1bb730deb4e408739fba20cb39

--- a/gale/home/index.html
+++ b/gale/home/index.html
@@ -2163,7 +2163,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
