--- a/gale/index.html
+++ b/gale/index.html
@@ -1393,7 +1393,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
