--- a/gale/settings/monitoring/audit-logs/index.html
+++ b/gale/settings/monitoring/audit-logs/index.html
@@ -1402,7 +1402,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
