--- a/gale/404.html
+++ b/gale/404.html
@@ -1384,7 +1384,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
