--- a/gale/agents/agent-monitor/about-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/about-agent-monitor/index.html
@@ -1483,7 +1483,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
