--- a/gale/agents/agents-flows/flows-overview/index.html
+++ b/gale/agents/agents-flows/flows-overview/index.html
@@ -1433,7 +1433,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
