--- a/gale/agents/agents-flows/manage-flow-nodes/index.html
+++ b/gale/agents/agents-flows/manage-flow-nodes/index.html
@@ -1512,7 +1512,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
