--- a/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/create-a-new-version-of-the-flow/index.html
+++ b/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/create-a-new-version-of-the-flow/index.html
@@ -1435,7 +1435,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
