--- a/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
+++ b/gale/agents/agents-flows/perform-other-actions-on-the-flow-builder/manage-input-and-output/index.html
@@ -1485,7 +1485,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
