--- a/gale/agents/agents-flows/types-of-nodes/api-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/api-node/index.html
@@ -1485,7 +1485,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
