--- a/gale/agents/agents-flows/types-of-nodes/end-node/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/end-node/index.html
@@ -1476,7 +1476,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
