--- a/gale/agents/agents-flows/types-of-nodes/script-libraries/index.html
+++ b/gale/agents/agents-flows/types-of-nodes/script-libraries/index.html
@@ -1398,7 +1398,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
