--- a/gale/agents/configure-an-agent/index.html
+++ b/gale/agents/configure-an-agent/index.html
@@ -1421,7 +1421,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
