--- a/gale/agents/create-a-new-agent/index.html
+++ b/gale/agents/create-a-new-agent/index.html
@@ -1431,7 +1431,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
