--- a/gale/agents/deploy-an-agent/index.html
+++ b/gale/agents/deploy-an-agent/index.html
@@ -1525,7 +1525,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
