--- a/gale/agents/manage-user-roles-and-permissions/index.html
+++ b/gale/agents/manage-user-roles-and-permissions/index.html
@@ -1433,7 +1433,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
