--- a/gale/agents/overview-copy/index.html
+++ b/gale/agents/overview-copy/index.html
@@ -1398,7 +1398,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
