--- a/gale/agents/overview/index.html
+++ b/gale/agents/overview/index.html
@@ -1472,7 +1472,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
