--- a/gale/getting-started/introduction/index.html
+++ b/gale/getting-started/introduction/index.html
@@ -1478,7 +1478,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
