--- a/gale/models/fine-tune-models/generate-an-api-key/index.html
+++ b/gale/models/fine-tune-models/generate-an-api-key/index.html
@@ -1404,7 +1404,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
