--- a/gale/models/open-source-models/deploy-an-imported-model-from-hugging-face/index.html
+++ b/gale/models/open-source-models/deploy-an-imported-model-from-hugging-face/index.html
@@ -1404,7 +1404,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
