--- a/gale/models/open-source-models/select-and-deploy-an-open-source-model/index.html
+++ b/gale/models/open-source-models/select-and-deploy-an-open-source-model/index.html
@@ -1404,7 +1404,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
