--- a/gale/models/overview/index.html
+++ b/gale/models/overview/index.html
@@ -1404,7 +1404,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
