--- a/gale/playground/create-a-new-prompt-experiment/index.html
+++ b/gale/playground/create-a-new-prompt-experiment/index.html
@@ -1404,7 +1404,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
