--- a/gale/playground/explore-other-actions-to-perform-in-the-prompt-playground/index.html
+++ b/gale/playground/explore-other-actions-to-perform-in-the-prompt-playground/index.html
@@ -1404,7 +1404,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
