--- a/gale/playground/generate-output-using-advanced-mode/index.html
+++ b/gale/playground/generate-output-using-advanced-mode/index.html
@@ -1404,7 +1404,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
