--- a/gale/settings/user-management/invite-a-user-to-your-account/index.html
+++ b/gale/settings/user-management/invite-a-user-to-your-account/index.html
@@ -1398,7 +1398,7 @@
         
   
   <span class="md-ellipsis">
-    Understanding the Agent Monitor interface
+    Understanding Agent Monitor
   </span>
   
 
