deploy: b4e4f7f926aefcedcef7d06c1cac2e67b1c1b382

--- a/gale/agents/agent-monitor/understanding-the-agent-monitor-interface/index.html
+++ b/gale/agents/agent-monitor/understanding-the-agent-monitor-interface/index.html
@@ -3243,10 +3243,10 @@
 <p>The Agent Monitor capabilities are shown on the following tabs:</p>
 <ul>
 <li>
-<p><strong>All runs</strong>: This tab displays comprehensive data on all agent run instances and provides a comprehensive record of all the endpoint calls made to the agent. </p>
+<p><strong>All runs</strong>: It shows comprehensive data on all agent run instances and provides a comprehensive record of all the endpoint calls made to the agent. </p>
 </li>
 <li>
-<p><strong>LLM calls</strong>: This tab shows specific data on Gen AI node run instances, focussing on endpoint calls made to Gen AI nodes within the agent.</p>
+<p><strong>LLM calls</strong>: It shows specific data on Gen AI node run instances, focussing on endpoint calls made to Gen AI nodes within the agent.</p>
 </li>
 </ul>
 <p>Both tabs include summary metrics at the top of the page, including total runs/requests, average response times (P90 and P99), and failure rates.</p>
