deploy: cc547a83efd18435014ff6851ae5ad4b69226afe

--- a/gale/agents/agent-monitor/accessing-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/accessing-agent-monitor/index.html
@@ -3081,7 +3081,7 @@
 <li><strong>All runs</strong></li>
 <li><strong>LLM calls</strong></li>
 </ul>
-<p>For more information, see <a href="../understanding-the-agent-monitor-interface/">Understanding the Agent Monitor interface</a>.</p>
+<p>For more information, see <a href="../understanding-the-agent-monitor-interface/">Understanding Agent Monitor</a>.</p>
 </li>
 <li>
 <p>Click each row for detailed information on each agent run or LLM call. A detailed view panel opens on the right.  </p>
