deploy: 7c6deab7e560ec34d738ff61b248ece66a540eb4

--- a/gale/settings/monitoring/overview/index.html
+++ b/gale/settings/monitoring/overview/index.html
@@ -3130,6 +3130,7 @@
 <p>Monitoring supports the following features:</p>
 <ol>
 <li><strong>Audit Logs</strong>: Enables the admin to view the log entries of all the changes made across their account by the member users. <a href="../audit-logs/" target="_blank">Learn more</a>.</li>
+<li><strong>Agent Analytics Dashboard</strong>: Empowers the admin to make informed decisions on agents deployed in their account by analyzing real-time performance metrics. <a href="../analytics/agent-analytics-dashboard/" target="_blank">Learn more</a>.</li>
 </ol>
 
 
