deploy: aa62e307e28ae9668152e0d27cafd73906ce323a

--- a/gale/agents/agent-monitor/accessing-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/accessing-agent-monitor/index.html
@@ -3148,7 +3148,7 @@
 <p>Click one of the following tabs to see the data for the deployed agents:</p>
 <ul>
 <li><strong>All runs</strong></li>
-<li><strong>LLM calls</strong></li>
+<li><strong>Model runs</strong></li>
 </ul>
 <p>For more information, see <a href="../understanding-the-agent-monitor-interface/">Understanding Agent Monitor</a>.</p>
 </li>
