--- a/gale/agents/agent-monitor/about-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/about-agent-monitor/index.html
@@ -3213,7 +3213,7 @@
 <li><strong>Performance Tracking</strong>: Monitor your agents across multiple runs, gaining valuable insights into response times, execution patterns, and overall efficiency.</li>
 <li><strong>Dual-View Analytics</strong>:<ul>
 <li><strong>All Runs</strong>: Comprehensive data on all agent instances, offering a holistic view of endpoint interactions.</li>
-<li><strong>LLM Calls</strong>: Focused analytics on Gen AI node executions, providing deeper insights into language model performance.</li>
+<li><strong>Model Runs</strong>: Focused analytics on Gen AI node executions, providing deeper insights into language model performance.</li>
 </ul>
 </li>
 <li><strong>Detailed Metrics</strong>: Access critical performance indicators, including total runs, average response times (P90 and P99), and failure rates, allowing for precise performance tuning.</li>
