deploy: 5d70daa48e8607f1faf94a35c6931abb74768437

--- a/gale/agents/agent-monitor/accessing-agent-monitor/index.html
+++ b/gale/agents/agent-monitor/accessing-agent-monitor/index.html
@@ -3153,7 +3153,7 @@
 <p>For more information, see <a href="../understanding-the-agent-monitor-interface/">Understanding Agent Monitor</a>.</p>
 </li>
 <li>
-<p>Click each row for detailed information on each agent run or LLM call. A detailed view panel opens on the right.  </p>
+<p>Click each row for detailed information on each agent run or model run. A detailed view panel opens on the right.  </p>
 <p>For more information, see <a href="../understanding-the-agent-monitor-interface/#viewing-detailed-run-information">Viewing detailed run information</a>.</p>
 </li>
 <li>
